--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -123,8 +123,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Button"
+        android:layout_marginBottom="16dp"
+        android:text="@string/options_button_reset_plays"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/optionsDogCountGroup"
         app:layout_constraintTop_toBottomOf="@+id/optionsDogCountGroup" />
+
+    <Button
+        android:id="@+id/optionsButtonResetScores"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="@string/options_button_reset_scores"
+        app:layout_constraintBottom_toBottomOf="@+id/optionsButtonResetPlays"
+        app:layout_constraintStart_toEndOf="@+id/optionsButtonResetPlays"
+        app:layout_constraintTop_toTopOf="@+id/optionsButtonResetPlays" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
