Connect UI to Model.

--- a/app/src/main/res/layout/activity_gamer.xml
+++ b/app/src/main/res/layout/activity_gamer.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:backgroundTint="#B0FFFFFF"
+    android:backgroundTintMode="src_atop"
     tools:context=".GamerActivity">
 
     <TableLayout
@@ -50,4 +53,5 @@
         android:textAlignment="textEnd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
